Quick fix on mobile

--- a/resources/assets/sass/pages/profile.scss
+++ b/resources/assets/sass/pages/profile.scss
@@ -2,6 +2,18 @@
 #profile-home {
   padding: 20px 0px;
 
+  @include media-breakpoint-down(sm) {
+    margin-left: -45px;
+    margin-right: -45px;
+    margin-top: -20px;
+  }
+
+  @include media-breakpoint-up(md) {
+    margin-right: -15px;
+    margin-left: -15px;
+    margin-top: 0px;
+  }
+
   .profile-picture {
     width: 100%;
     max-width: 150px;
